2026-02-14T01:05:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22008206357 # 877
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1087 / 695 1089
* notice: next accum: outdated-unq outdated-all / unq all: 693 1087 / 698 1092
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28] / [2026-02-07 2026-02-10]

2026-02-11T01:16:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21888920794 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1087 / 696 1090
* notice: next accum: outdated-unq outdated-all / unq all: 693 1087 / 695 1089
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-10T01:18:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21847699170 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1087 / 695 1089
* notice: next accum: outdated-unq outdated-all / unq all: 693 1087 / 696 1090
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1