@@ -1,3 +1,12 @@
+2026-02-15T01:10:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22027322182 # 878
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 693 1087 / 698 1092
+* notice: next accum: outdated-unq outdated-all / unq all: 695 1089 / 698 1092
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-29 2026-01-30] / []
+
 2026-02-14T01:05:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22008206357 # 877
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
